--- a/src/packages/excalidraw/package.json
+++ b/src/packages/excalidraw/package.json
@@ -60,7 +60,9 @@
     "ts-loader": "8.0.18",
     "webpack": "5.24.3",
     "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.5.0"
+    "webpack-cli": "4.5.0",
+    "vite": "2.1.2",
+    "@vitejs/plugin-react-refresh": "1.3.1"
   },
   "bugs": "https://github.com/excalidraw/excalidraw/issues",
   "repository": "https://github.com/excalidraw/excalidraw",
@@ -68,6 +70,7 @@
   "scripts": {
     "build:umd": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js",
     "build:umd:withAnalyzer": "cross-env NODE_ENV=production ANALYZER=true webpack --config webpack.prod.config.js",
-    "pack": "yarn build:umd && yarn pack"
+    "pack": "yarn build:umd && yarn pack",
+    "build:vite": "vite build"
   }
 }
